--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-
+  <link rel="stylesheet" href="./public/assets/css/style.css">
   <title>Multi-step form | Frontend Mentor</title>
 </head>
 
@@ -13,125 +13,183 @@
   <div id="app"></div>
   <div class="main-wrapper">
     <!-- Sidebar start -->
-    <sidebar>
+    <aside>
       <ol>
-        <li>
-          Step 1
-          Your info
-        </li>
-        <li>
-          Step 2
-          Select plan
-        </li>
-        <li>
-          Step 3
-          Add-ons
-        </li>
-        <li>
-          Step 4
-          Summary
-        </li>
+        <li tabindex="0">Step 1<br>Your info</li>
+        <li tabindex="0">Step 2<br>Select plan</li>
+        <li tabindex="0">Step 3<br>Add-ons</li>
+        <li tabindex="0">Step 4<br>Summary</li>
       </ol>
-    </sidebar>
+    </aside>
     <!-- Sidebar end -->
 
     <!-- main start -->
     <main>
-      <form action="">
+      <form action="#" aria-labelledby="form-heading">
         <section>
-
-          <article class="step">
+          <h1 class="display-none" id="form-heading">Subscription Form</h1>
+          <ol>
             <!-- Step 1 start -->
-            <h2>Personal info<h2>
-            Please provide your name, email address, and phone number.
+            <li class="step">
+              <article>
+                <h2 id="personal-info-labels">Personal info</h2>
+                <p class="step-description">
+                  Please provide your name, email address, and phone number.
+                </p>
 
-            Name
-            e.g. Stephen King
+                <div class="labels-wrapper" role="group" aria-labelledby="personal-info-labels">
+                  <div>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" placeholder="e.g. Stephen King" required aria-required="true">
+                  </div>
 
-            Email Address
-            e.g. stephenking@lorem.com
+                  <div>
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" placeholder="e.g. stephenking@lorem.com" required
+                      aria-required="true">
+                  </div>
 
-            Phone Number
-            e.g. +1 234 567 890
+                  <div>
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" placeholder="e.g. +1 234 567 890" required aria-required="true">
+                  </div>
+                </div>
 
-            Next Step
+                <div class="step-btns-wrapper">
+                  <button type="button" class="btn" aria-label="Next Step">
+                    <span class="btn-wrap">Next Step</span>
+                  </button>
+                </div>
+              </article>
+            </li>
 
-          </article>
-          <!-- Step 1 end -->
+            <!-- Step 2 start -->
+            <li class="step">
+              <article>
+                <h2 id="plan-selection">Select your plan</h2>
 
-          <!-- Step 2 start -->
-          <article class="step">
-            <h2>Select your plan</h2>
-            You have the option of monthly or yearly billing.
+                <p class="step-description">
+                  You have the option of monthly or yearly billing.
+                </p>
 
-            Arcade
-            $9/mo
+                <div class="labels-wrapper" role="radiogroup" aria-labelledby="plan-selection">
+                  <div>
+                    <label>
+                      <input type="radio" name="plan" value="Arcade" required checked> Arcade - $9/mo
+                    </label>
+                  </div>
+                  <div>
+                    <label>
+                      <input type="radio" name="plan" value="Advanced"> Advanced - $12/mo
+                    </label>
+                  </div>
+                  <div>
+                    <label>
+                      <input type="radio" name="plan" value="Pro"> Pro - $15/mo
+                    </label>
+                  </div>
+                </div>
 
-            Advanced
-            $12/mo
+                <div class="switch">
+                  <label class="switch__label" for="planType" id="monthly">
+                    Monthly
+                  </label>
+                  <button class="switch__button" type="button" id="planType" title="monthly or yearly?"
+                    aria-live="polite" aria-labelledby="monthly">
+                  </button>
+                  <label class="switch__label" for="planType" id="yearly">Yearly</label>
+                </div>
 
-            Pro
-            $15/mo
+                <div class="step-btns-wrapper">
+                  <button type="button" class="btn" aria-label="Go Back">
+                    <span class="btn-wrap">Go Back</span>
+                  </button>
+                  <button type="button" class="btn" aria-label="Next Step">
+                    <span class="btn-wrap">Next Step</span>
+                  </button>
+                </div>
+              </article>
+            </li>
 
-            Monthly
-            Yearly
+            <!-- Step 3 start -->
+            <li class="step">
+              <article>
 
-            Go Back
-            Next Step
-          </article>
-          <!-- Step 2 end -->
+                <h2 id="pick-add-ons">Pick add-ons</h2>
+                <p class="step-description">
+                  Add-ons help enhance your gaming experience.
+                </p>
 
-          <!-- Step 3 start -->
-          <article class="step">
+                <div role="group" aria-labelledby="pick-add-ons">
+                  <div>
+                    <label>
+                      <input type="checkbox" name="addons" value="OnlineService"> Online service - Access to multiplayer
+                      games +$1/mo
+                    </label>
+                  </div>
+                  <div>
+                    <label>
+                      <input type="checkbox" name="addons" value="LargerStorage"> Larger storage - Extra 1TB of cloud
+                      save
+                      +$2/mo
+                    </label>
+                  </div>
+                  <div>
+                    <label>
+                      <input type="checkbox" name="addons" value="CustomProfile"> Customizable Profile - Custom theme on
+                      your profile +$2/mo
+                    </label>
+                  </div>
+                </div>
 
-            <h2>Pick add-ons</h2>
-            Add-ons help enhance your gaming experience.
+                <div class="step-btns-wrapper">
+                  <button type="button" class="btn" aria-label="Go Back" onclick="nextStep(-1)">
+                    <span class="btn-wrap">Go Back</span>
+                  </button>
+                  <button type="button" class="btn" aria-label="Next Step" onclick="nextStep(3)">
+                    <span class="btn-wrap">Next Step</span>
+                  </button>
+                </div>
 
-            Online service
-            Access to multiplayer games
-            +$1/mo
+              </article>
+            </li>
 
-            Larger storage
-            Extra 1TB of cloud save
-            +$2/mo
+            <!-- Step 4 start -->
+            <li class="step">
+              <article>
+                <h2>Finishing up</h2>
+                <p>Double-check everything looks OK before confirming.</p>
 
-            Customizable Profile
-            Custom theme on your profile
-            +$2/mo
+                <div id="summary" aria-labelledby="finishing-up">
+                  <!-- Dynamically add subscription and add-on selections here -->
+                </div>
 
-            Go Back
-            Next Step
+                <div class="step-btns-wrapper">
+                  <button type="button" class="btn" aria-label="Go Back" onclick="nextStep(-1)">
+                    <span class="btn-wrap">Go Back</span>
+                  </button>
+                  <button type="button" class="btn" aria-label="Confirm" onclick="submitForm()">
+                    <span class="btn-wrap">Confirm</span>
+                  </button>
+                </div>
+              </article>
+            </li>
 
-          </article>
-          <!-- Step 3 end -->
+            <!-- Step 5 start -->
+            <li class="step">
+              <article>
 
-          <!-- Step 4 start -->
-          <article class="step">
+                <h2>Thank you!</h2>
 
-            <h2>Finishing up</h2>
-            Double-check everything looks OK before confirming.
+                <p>
+                  Thanks for confirming your subscription! We hope you have fun
+                  using our platform. If you ever need support, please feel free
+                  to email us at <a href="mailto:support@loremgaming.com">support@loremgaming.com</a>.
+                </p>
 
-            <!-- Dynamically add subscription and add-on selections here -->
-
-            Total (per month/year)
-
-            Go Back
-            Confirm
-
-          </article>
-          <!-- Step 4 end -->
-
-          <!-- Step 5 start -->
-          <article class="step">
-
-            <h2>Thank you!</h2>
-
-            Thanks for confirming your subscription! We hope you have fun
-            using our platform. If you ever need support, please feel free
-            to email us at support@loremgaming.com.
-
-          </article>
-          <!-- Step 5 end -->
+              </article>
+            </li>
+          </ol>
         </section>
       </form>
 
@@ -139,16 +197,6 @@
     <!-- main end -->
 
   </div>
-
-
-
-
-
-
-
-
-
-
 
   <script type="module" src="/src/main.ts"></script>
 </body>
